--- a/HouseOfApps.css
+++ b/HouseOfApps.css
@@ -1,266 +1,14 @@
-/**{
-    margin: 0;
-    padding: 0;
-}
-.animation1{
-    width: 100%;
-    height: 450px;
-}
-.animation2yazi{
-    width: 90%;
-    height: 450px;
-}
-.sosyalmedya a img{
-    width: 0.5cm;
-    height: 0.5cm;
-}
-
-#baslangicsayfasi{
-    width: 100%;
-    height: 650px;
-    background:url("/h.app.foto/hoa-background.png");
-    background-size:cover;
-    background-repeat: no-repeat;
-    
-}
-.sectionlinkleri{
-    font-family: 'Courier New';
-    text-decoration: none;
-    font-weight:bolder;
-    display: inline-block;
-    white-space: pre;
-    float: left;
-    color:white;
-}
-
-.sectionlinkleri:hover{
-    text-decoration: none;
-    color: white;
-}
-#logo{  
-    position: absolute;
-    left: 120px;
-    top:30px;  
-}
-.menuler{
-    position: absolute;
-    left: 450px;
-    top:50px;
-    width: 50%;
-    font-size: 18px;
-}
-.sonmenuler{
-    position: absolute;
-    width: 50%;
-    font-size: 18px;
-    margin-top:40%;
-    margin-left: 30%;
-}
-.sosyalmedya{
-    width:60px;
-    height: 40px;
-    position: relative;
-    float: right;
-    top:30px;
-    right:30px ;
-}
-#sosyalmedyason{
-    width:60px;
-    height: 40px;
-    position: relative;
-    margin-top: 250px !important;
-    margin-right: 47%;
-    
-}
-.bizkimizdiv{
-    background: url("/h.app.foto/office-photo.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    width: 100%;
-    height:350px ;
-    padding-top: 10px;
-}
-#bizkimizaciklamasi{
-    color: white;
-    text-align: center;
-    margin-top: 80px; 
-    font-size: 30px;
-    font-family: monospace;
-    white-space: pre-line;
-    font-weight: lighter;
-}
-.bölmelidivler{
-    width: 100%;
-    height: 450px;
-    background-color: #ebeced;
-}
-.yazi{
-    color: black;
-    text-align: center;
-    white-space: pre-line;
-    font-family: 'Courier New';
-    display: inline-block;
-    float: left;
-    position: relative;
-    width: 45%;
-    height:450px ;
-    
-    
-}
-#houseofweb{
-  float: right;
-}
-#ikiiphone{
-    float: right;
-}
-.resim{
-    display: inline-block;
-    float: left;
-    width: 45%;
-    height: 450px;    
-}
-#houseofdigital{
-   float: right;
-}
-#timeline1{
-    height: 430px;
-    margin-top: 20px;
-}
-#tablet{
-    float: right;
-}
-#ikiiphoneimg{
-    margin-left: 120px;
-}
-#tabletimg{
-    margin-left: 100px;
-}
-.timeline{
+/**
+.timelinecizgi{
     width: 0.05cm;
     background-color:#c2c2c2 ;
     height:450px;
     display: inline-block;
     float: left;
     margin-left: 100px;
-}
-#timelineiciimg{
-    position: relative;
-    margin-top: 150px;
-    margin-left: -50px;
-}
-.animation1, #ikiiphoneimg, .animation2yazi, .animation2{
-    margin-top: 80px;
-}
-#referanslarsayfasi{
-    width: 100%;
-    height: 650px;
-}
-#dominosslayt1,#dominosslayt2{
-    background: url(/h.app.foto/dominos-background.png);
-    
-}
-#reckittslayt1,#reckittslayt2{
-    background: #cc12a4 
-}
-#vakifemeklilikslayt1,#vakifemeklilikslayt2{
-    background-color: #E89600
-
-}
-
-.cerceveicidivler{
-    width: 50%;
-    height: 650px;
-    float: left;
-
-}
-.logolar{
-    margin-left: 250px;
-    margin-top: 60px;
-}
-.slaytyazilari{
-    margin-top: 80px;
-    color:white;
-    font-weight: 300;
-    font-family: Verdana;
-    white-space: pre-line;
-    text-align: center;  
-}
-#dominoslink{
-    margin-left: 250px;
-}
-#rblink{
-    margin-left: 250px;
-}
-#reckittyazisi{
-    margin-top: 300px;
-}
-.linkdiv{
-    margin-left: 150px;
-    margin-top: 60px;
-}
-.linkyazisi{
-    color: white;
-    text-decoration: none;
-    font-weight: bolder;
-}
-.slayttelefongorunumleri{
-    position: relative;
-    display: inline-block;
-    margin-left: 200px;
-}
-
-button {
-    -webkit-appearance: none;
-    background: transparent;
-    border: 0;
-    outline:0;
-  }
-  
+}  
   svg {
     padding: 5px;
-  }
-  
-  .arrow {
-    cursor: pointer;
-    position: absolute;
-    width: 70px;
-    height: 90px;
-  }
-  
-  .left {
-    margin-top: -350px;
-    left: 2%;
-  }
-  
-  .right {
-      margin-top: -350px;
-    left: 90%;
-  }
-  
-  .left:hover polyline,
-  .left:focus polyline {
-    stroke-width: 3;
-  }
-  
-  .left:active polyline {
-    stroke-width: 6;
-    transition: all 100ms ease-in-out;
-  }
-  
-  .right:hover polyline,
-  .right:focus polyline {
-    stroke-width: 3;
-  }
-  
-  .right:active polyline {
-    stroke-width: 6;
-    transition: all 100ms ease-in-out;
-  }
-  
-  polyline {
-    transition: all 250ms ease-in-out;
   }
   .seffafdiv{
       background-color:rgba(70,67,67,0.3);
@@ -269,45 +17,25 @@ button {
       position: absolute;
       margin-top: 550px;    
   }
-  .w3-badge {height:13px;width:13px;padding:0;};
-  .w3-left, .w3-right, .w3-badge {cursor:pointer};
-  .pisim{
-      display: inline-block;
-      margin-left: 10px; 
-      transition: font-weight 0.6s !important;
-  }
-  .pisim p{
-    color: white !important;
-    margin-left: 40px;
-  }
-  .pisim:hover{
-      font-weight: 900;
-  }
-   
-  .carousel-indicators{
-      margin-right: 0px !important;
-      margin-left: 0px   !important; 
-  }
-  .carousel-indicators li{
-      margin-top: -5px;
-      height: 15px !important;
-      width: 15px !important;
-      border-radius: 50%;
-      margin-right: 50px !important;
-      margin-left: 10px !important;
-      opacity: unset !important;  
-  }
-  #wearehere{
-    cursor: pointer; 
-    text-decoration: none ;
+  .timelinecizgi{
+
+    width: 0.5%;
+    background-color:#c2c2c2 ;
+    height:100vh;
+    display: inline-block;
+    position: absolute;
+    margin-left: 50%;
   }*/
+
   .timeline{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
      height: 100%;
+     border: chartreuse solid 2px;
   }
+  
 
 .yazi{
     display: flex;
@@ -353,7 +81,7 @@ button {
 }
 #baslangicsayfasi{
     width: 100%;
-    background:url("/h.app.foto/hoa-background.png");
+    background:url("./h.app.foto/hoa-background.png");
     background-size:cover;
     background-repeat: no-repeat;
     object-fit: contain;
@@ -372,10 +100,96 @@ button {
     display: inline-block;
 
 }
-#vakifemeklilikslayt1,#vakifemeklilikslayt2{
+.vakif{
     background-color: #E89600
 
 }
+.reckitt{
+    background: #cc12a4 
+}
+.dominoss{
+    background: url("./h.app.foto/dominos-background.png");
+    
+}
+
+.slaytyazilari{
+    color:white;
+    font-family: Verdana;
+    white-space: pre-line;
+    text-align: center; 
+    font-weight: normal; 
+}
+.linkyazisi{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+.iframevertical{
+    width: 100%;
+    height: 100%;
+    display: flex;
+     align-items: center;
+      justify-content: center;
+}
+
+/*.carousel-indicators{
+    margin-right: 0px !important;
+    margin-left: 0px   !important; 
+}
+.carousel-indicators li{
+    border-radius: 50%;
+    opacity: unset !important;  
+}*/
+.arrow {
+    cursor: pointer;
+    position: absolute;
+    width: 70px;
+    height: 90px;
+  }
+
+  .left {
+    margin-top: -350px;
+    left: 2%;
+  }
+  
+  .right {
+      margin-top: -350px;
+    left: 90%;
+  }
+
+
+  .left:hover polyline,
+  .left:focus polyline {
+    stroke-width: 3;
+  }
+  
+  .left:active polyline {
+    stroke-width: 6;
+    transition: all 100ms ease-in-out;
+  }
+  
+  .right:hover polyline,
+  .right:focus polyline {
+    stroke-width: 3;
+  }
+  
+  .right:active polyline {
+    stroke-width: 6;
+    transition: all 100ms ease-in-out;
+  }
+  
+  polyline {
+    transition: all 250ms ease-in-out;
+  }
+  button {
+    -webkit-appearance: none;
+    background: transparent;
+    border: 0;
+    outline:0;
+  }
+  .w3-badge {height:13px;width:13px;padding:0;};
+  .w3-left, .w3-right, .w3-badge {cursor:pointer};
+  
 
   
   
