--- a/HouseOfApps.css
+++ b/HouseOfApps.css
@@ -10,13 +10,6 @@
   svg {
     padding: 5px;
   }
-  .seffafdiv{
-      background-color:rgba(70,67,67,0.3);
-      width: 100%;
-      height: 100px;
-      position: absolute;
-      margin-top: 550px;    
-  }
   .timelinecizgi{
 
     width: 0.5%;
@@ -25,7 +18,15 @@
     display: inline-block;
     position: absolute;
     margin-left: 50%;
-  }*/
+  }
+  .carousel-indicators{
+    margin-right: 0px !important;
+    margin-left: 0px   !important; 
+}
+.carousel-indicators li{
+    border-radius: 50%;
+    opacity: unset !important;  
+}*/
 
   .timeline{
     display: flex;
@@ -132,14 +133,7 @@
       justify-content: center;
 }
 
-/*.carousel-indicators{
-    margin-right: 0px !important;
-    margin-left: 0px   !important; 
-}
-.carousel-indicators li{
-    border-radius: 50%;
-    opacity: unset !important;  
-}*/
+
 .arrow {
     cursor: pointer;
     position: absolute;
@@ -189,6 +183,13 @@
   }
   .w3-badge {height:13px;width:13px;padding:0;};
   .w3-left, .w3-right, .w3-badge {cursor:pointer};
+  .seffafdiv{
+    background-color:rgba(70,67,67,0.3);
+    width: 100%;
+    height: 20vh;
+    position: absolute;
+       
+}
   
 
   
