--- a/HouseOfApps.css
+++ b/HouseOfApps.css
@@ -34,7 +34,7 @@
     justify-content: center;
     width: 100%;
      height: 100%;
-     border: chartreuse solid 2px;
+    
   }
   
 
@@ -183,12 +183,27 @@
   }
   .w3-badge {height:13px;width:13px;padding:0;};
   .w3-left, .w3-right, .w3-badge {cursor:pointer};
-  .seffafdiv{
-    background-color:rgba(70,67,67,0.3);
-    width: 100%;
-    height: 20vh;
-    position: absolute;
-       
+ 
+.carouseldiv{
+  display: inline-block; 
+  transition: font-weight 0.6s !important;
+}
+.carouseldiv p{
+color: white !important;
+}
+.carouseldiv:hover{
+  font-weight: 900;
+}
+
+.carousel-indicators li{
+  height: 10% !important;
+  width: 10% !important;
+  border-radius: 50%;
+  opacity: unset !important;  
+}
+.carousel-indicators{
+  margin-right: 0px !important;
+  margin-left: 0px   !important; 
 }
   
 
